# BUAA_Numerical_Analysis

./: README.md
NumericalAnalysisT1/: CMakeLists.txt  EigenValueUtils.cpp  EigenValueUtils.h  LinearEqLuSolver.cpp  LinearEqLuSolver.h  SymBandMatrix.cpp  SymBandMatrix.h  TimerUtil.cpp  TimerUtil.h  Vector.cpp  Vector.h  main.cpp
NumericalAnalysisT2/: CMakeLists.txt  EigenUtils.cpp  EigenUtils.h  LinearEqUtil.cpp  LinearEqUtil.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  ZeroRangeGuard.h  main.cpp
NumericalAnalysisT8/: CMakeLists.txt  InterpolationUtil.cpp  InterpolationUtil.h  LinearEqUtil.cpp  LinearEqUtil.h  Matrix.cpp  Matrix.h  NonLinFormula.cpp  NonLinFormula.h  NonLinItemMatrix.cpp  NonLinItemMatrix.h  NonLinearEqUtil.cpp  NonLinearEqUtil.h  NonSqMatrix.cpp  NonSqMatrix.h  Vector.cpp  Vector.h  ZeroRangeGuard.h  main.cpp
设计文档/: 第一次作业.md  第三次作业.md  第二次作业.md
